@@ -1,0 +1,72 @@
+/*
+ *	subtitleeditor -- a tool to create or edit subtitle
+ *
+ *	http://home.gna.org/subtitleeditor/
+ *	https://gna.org/projects/subtitleeditor/
+ *
+ *	Copyright @ 2005-2008, kitone
+ *
+ *	This program is free software; you can redistribute it and/or modify
+ *	it under the terms of the GNU General Public License as published by
+ *	the Free Software Foundation; either version 3 of the License, or
+ *	(at your option) any later version.
+ *
+ *	This program is distributed in the hope that it will be useful,
+ *	but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *	GNU General Public License for more details.
+ *
+ *	You should have received a copy of the GNU General Public License
+ *	along with this program. If not, see <http://www.gnu.org/licenses/>.
+ */
+
+#include "SubtitleFormat.h"
+#include "Error.h"
+#include "utility.h"
+
+/*
+ *
+ */
+SubtitleFormat::SubtitleFormat()
+{
+	m_document = NULL;
+}
+
+/*
+ *
+ */
+SubtitleFormat::~SubtitleFormat()
+{
+}
+
+/*
+ *
+ */
+void SubtitleFormat::set_document(Document *document)
+{
+	m_document = document;
+}
+
+/*
+ *
+ */
+Document* SubtitleFormat::document()
+{
+	return m_document;
+}
+
+/*
+ *
+ */
+void SubtitleFormat::open(FileReader &file)
+{
+	throw IOFileError(_("This function are not implemented to this format."));
+}
+
+/*
+ *
+ */
+void SubtitleFormat::save(FileWriter &file)
+{
+	throw IOFileError(_("This function are not implemented to this format."));
+}
