@@ -1,0 +1,80 @@
+#ifndef _SubtitleFormatFactory_h
+#define _SubtitleFormatFactory_h
+
+/*
+ *	subtitleeditor -- a tool to create or edit subtitle
+ *
+ *	http://home.gna.org/subtitleeditor/
+ *	https://gna.org/projects/subtitleeditor/
+ *
+ *	Copyright @ 2005-2008, kitone
+ *
+ *	This program is free software; you can redistribute it and/or modify
+ *	it under the terms of the GNU General Public License as published by
+ *	the Free Software Foundation; either version 3 of the License, or
+ *	(at your option) any later version.
+ *
+ *	This program is distributed in the hope that it will be useful,
+ *	but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *	GNU General Public License for more details.
+ *
+ *	You should have received a copy of the GNU General Public License
+ *	along with this program. If not, see <http://www.gnu.org/licenses/>.
+ */
+
+#include "SubtitleFormat.h"
+
+/*
+ *
+ */
+class SubtitleFormatFactory
+{
+public:
+
+	/*
+	 * Virtual desctructor
+	 */
+	virtual ~SubtitleFormatFactory()
+	{
+		// nothing
+	}
+
+	/*
+	 *
+	 */
+	virtual SubtitleFormatInfo get_info() = 0;
+
+	/*
+	 *
+	 */
+	virtual SubtitleFormat* create() = 0;
+};
+
+/*
+ * 
+ */
+template<class T>
+class SubtitleFormatFactoryRegister : public SubtitleFormatFactory
+{
+public:
+
+	/*
+	 *
+	 */
+	SubtitleFormatInfo get_info()
+	{
+		return T::get_info();
+	}
+
+	/*
+	 *
+	 */
+	virtual SubtitleFormat* create()
+	{
+		T *sf = new T();
+		return sf;
+	}
+};
+
+#endif//_SubtitleFormatFactory_h
